--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     /* Makes the body take the full height of the viewport */
 }
 
-#h1 {
+h1 {
     font-size: 2em;
     /* Sets the size of the header text */
     text-align: center;
